Fixed styling and centering issues, especially on mobile when in landscape or when using on-screen keyboard.

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -10,6 +10,10 @@
     background: rgba(158, 207, 231, 0.5);
 }
 
+.new-user {
+  background-color: #000010;
+}
+
 #user_alert {
     position:fixed;
     top:50px;
@@ -59,15 +63,17 @@
 }
 
 .inner {
-  position:absolute;
-  top:50%; left:50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 60vh;
+  min-height:100%;
+  min-height: calc(100vh - 30px);
+  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .box {
-  height: 100vh;
+  min-height: calc(100vh - 30px);
+  max-height: auto;
 }
 
 #nav-link-id {
